# prettysusi

./: README.md  pyproject.toml
src/: __init__.py  frames.py  layouts.py  tables.py  widgets.py  windows.py
src/abstract/: frames.py  layouts.py  tables.py  widgets.py  windows.py
src/qt/: __init__.py  frames.py  layouts.py  tables.py  widgets.py  windows.py
src/tk/: __init__.py  frames.py  layouts.py  tables.py  widgets.py  windows.py
src/wx/: __init__.py  frames.py  layouts.py  tables.py  widgets.py  windows.py
